--- a/src/components/Projects/projects.scss
+++ b/src/components/Projects/projects.scss
@@ -3,38 +3,133 @@
   justify-content: center;
   height: 100vh;
   padding-top: 120px;
-  background: 
-    repeating-linear-gradient(
-      150deg, 
-      #f6dcac 0%, #f6dcac 44%, 
+  background:
+    repeating-linear-gradient(150deg,
+      #f6dcac 0%, #f6dcac 44%,
       #8cb5ad 44%, #8cb5ad 46%,
       #006d84 46%, #006d84 48%,
       #084d74 48%, #084d74 50%,
-      #8cb5ad 50%, #8cb5ad 52%,   
+      #8cb5ad 50%, #8cb5ad 52%,
       #006d84 52%, #006d84 54%,
       #084d74 54%, #084d74 56%,
-      #f6dcac 56%, #f6dcac 100%
-      );
+      #f6dcac 56%, #f6dcac 100%);
+
+  h1 {
+    margin-left: 100px;
+    padding: 20px;
+    color: #195477;
+    font-weight: bold;
+    font-size: 30px;
+  }
 
   .project-container {
-    background-color: #e8d7d0ef;
-    margin: auto;
-    max-width: 1200px;
-    padding-top: 20px;
     padding: 20px;
-    display: flex;
-    justify-content: space-between;
+    margin: auto;
+    max-width: 1300px;
     border-radius: 20px;
 
-    .project-list {
-      padding: 20px;
+    .project-view {
+      display: grid;
+      grid-template-columns: repeat(4, 2fr);
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      gap: 20px;
+
+      .project-item {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        background-color: white;
+        height: 350px;
+        cursor: pointer;
+        transition: filter 0.5s;
+        border-radius: 10px;
+        overflow: hidden;
+
+        h2 {
+          padding: 10px;
+        }
+
+        .description {
+          padding: 15px;
+          width: 300px;
+          height: 297px;
+          line-height: 25px;
+          align-items: center;
+        }
+
+        .tech {
+          display: flex;
+          flex-direction: row;
+          flex-wrap: wrap;
+          justify-content: center;
+          height: 80px;
+          gap: 10px;
+          padding: 10px;
+          margin-bottom: 10px;
+
+          img {
+            height: 40px;
+          }
+        }
+
+        .image-container {
+          position: relative;
+          overflow: hidden;
+
+          .img-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5); // Adjust the color and opacity as needed
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white; // Adjust the text color
+          }
+
+          .project-image {
+            width: 100%;
+            height: auto; // Adjust the height as needed
+            display: block;
+          }
+        }
+
+        img {
+          max-width: 300px;
+        }
+
+        .project-links {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          gap: 10px;
+          margin-bottom: 10px;
+
+          a {
+            text-decoration: none;
+            color: #036977;
+          }
+
+          button {
+            margin-top: auto;
+            padding: 10px;
+            background-color: transparent;
+            border-radius: 10px;
+            color: #036977;
+            font-weight: 700;
+            border: 3px #036977 solid;
+            cursor: pointer;
+          }
+        }
+      }
+
+
     }
 
-    .project-view {
-      height: 500px;
-      width: 600px;
-      border: solid 4px #036977;
-      border-radius: 10px;
-    }
+
   }
 }
