--- a/src/components/Projects/projects.scss
+++ b/src/components/Projects/projects.scss
@@ -1,135 +1,129 @@
 .projects {
+  display: flex;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  padding-top: 120px;
-  background:
-    repeating-linear-gradient(150deg,
-      #f6dcac 0%, #f6dcac 44%,
-      #8cb5ad 44%, #8cb5ad 46%,
-      #006d84 46%, #006d84 48%,
-      #084d74 48%, #084d74 50%,
-      #8cb5ad 50%, #8cb5ad 52%,
-      #006d84 52%, #006d84 54%,
-      #084d74 54%, #084d74 56%,
-      #f6dcac 56%, #f6dcac 100%);
-
-  h1 {
-    margin-left: 100px;
-    padding: 20px;
-    color: #195477;
-    font-weight: bold;
-    font-size: 30px;
-  }
 
   .project-container {
-    padding: 20px;
+    width: 80%;
     margin: auto;
-    max-width: 1300px;
-    border-radius: 20px;
+    display: flex;
+    align-items: center;
 
-    .project-view {
-      display: grid;
-      grid-template-columns: repeat(4, 2fr);
-      justify-content: center;
-      align-items: center;
+    .img-container {
+      width: 50%;
+      display: flex;
+      border-radius: 15px;
+      height: 400px;
+    }
+    
+    .project-info {
       flex-direction: column;
-      gap: 20px;
+      width: 50%;
+      height: 350px;
+      margin-left: -80px;
+      padding: 20px;
+      display: flex;
+      gap: 10px;
+      border-radius: 15px;
+      border: solid 2px #036977;
+      background-color: antiquewhite;
 
-      .project-item {
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        background-color: white;
-        height: 350px;
-        cursor: pointer;
-        transition: filter 0.5s;
-        border-radius: 10px;
-        overflow: hidden;
-
-        h2 {
-          padding: 10px;
-        }
-
-        .description {
-          padding: 15px;
-          width: 300px;
-          height: 297px;
-          line-height: 25px;
-          align-items: center;
-        }
-
-        .tech {
-          display: flex;
-          flex-direction: row;
-          flex-wrap: wrap;
-          justify-content: center;
-          height: 80px;
-          gap: 10px;
-          padding: 10px;
-          margin-bottom: 10px;
-
-          img {
-            height: 40px;
-          }
-        }
-
-        .image-container {
-          position: relative;
-          overflow: hidden;
-
-          .img-overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.5); // Adjust the color and opacity as needed
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white; // Adjust the text color
-          }
-
-          .project-image {
-            width: 100%;
-            height: auto; // Adjust the height as needed
-            display: block;
-          }
-        }
-
-        img {
-          max-width: 300px;
-        }
-
-        .project-links {
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          gap: 10px;
-          margin-bottom: 10px;
-
-          a {
-            text-decoration: none;
-            color: #036977;
-          }
-
-          button {
-            margin-top: auto;
-            padding: 10px;
-            background-color: transparent;
-            border-radius: 10px;
-            color: #036977;
-            font-weight: 700;
-            border: 3px #036977 solid;
-            cursor: pointer;
-          }
-        }
+      h1 {
+        font-size: 35px;
+        color: #036977;
       }
 
+      p {
+        font-size: 14px;
+        line-height: 30px;
+        color: #1e2e47;
+      }
+  
+      .tech {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        background-color: antiquewhite;
+        border-radius: 10px;
+        box-shadow: inset 0 0 6px rgba(27, 26, 26, 0.1);
+        padding: 5px;
+        gap: 15px;
+        align-content: flex-start;
+  
+        img {
+          height: 40px;
+        }
+      }
+  
+      .project-links {
+        display: flex;
+        gap: 10px;
+  
+        a {
+          text-decoration: none;
+          color: white;
+        }
+  
+        button {
+          padding: 10px;
+          border-radius: 10px;
+          color: #036977;
+          font-weight: 700;
+          background-color: #036977;
+          border: 1px #036977 solid;
+          cursor: pointer;
+        }
+      }
+    }
+  }
 
+  @media (max-width: 1000px) {
+    .project-container {
+      width: 95%;
     }
 
+  }
+  @media (max-width: 800px) {
+    .project-container {
+      flex-direction: column;
+      width:90%;
+      border-radius: 15px;
 
+      .img-container {
+        width: 100%;
+        height: 30vh;
+      }
+
+      .project-info    {
+        width: 90%;
+        margin-left: 0;
+        margin-top: -80px;
+        min-height: 400px;
+      }
+    }
+
+  }
+  @media (max-width: 550px) {
+    .project-container {
+      flex-direction: column;
+      width: 95%;
+      border-radius: 15px;
+      border-top: solid 2px #036977;
+      border-bottom: solid 2px #036977;
+      overflow: hidden;
+
+      .img-container {
+        width: 100%;
+        border-radius: 0;
+      }
+      .project-info {
+        width: 100%;
+        
+        margin-top: 0px;
+        border: none;
+        border-radius: 0;
+      }
+    }
   }
 }
